ajsutando URLs Semânticas, atualizando swagger e README
